--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -6,5 +6,23 @@
   ],
   "imageSize": 100,
   "commit": true,
-  "contributors": []
+  "contributors": [
+    {
+      "login": "nakednous",
+      "name": "Jean Pierre Charalambos",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/645599?v=4",
+      "profile": "https://github.com/nakednous",
+      "contributions": [
+        "code",
+        "doc",
+        "bug",
+        "design",
+        "ideas",
+        "question",
+        "talk",
+        "test",
+        "tool"
+      ]
+    }
+  ]
 }
