--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -23,6 +23,15 @@
         "test",
         "tool"
       ]
+    },
+    {
+      "login": "whispers16",
+      "name": "Fabián Monsalve",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/10618020?v=4",
+      "profile": "https://github.com/whispers16",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
