--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -32,6 +32,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "eabohorquezg",
+      "name": "eabohorquezg",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/5273761?v=4",
+      "profile": "https://github.com/eabohorquezg",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
