Add @xyos as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -41,6 +41,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "xyos",
+      "name": "xyos",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/96923?v=4",
+      "profile": "https://github.com/xyos",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
