--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -50,6 +50,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "caatovarbo",
+      "name": "caatovarbo",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/7006928?v=4",
+      "profile": "https://github.com/caatovarbo",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
