Add @sacastroc as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -59,6 +59,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "sacastroc",
+      "name": "Sergio Castro",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/14080124?v=4",
+      "profile": "https://github.com/sacastroc",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
