Add @vgramirezc as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -68,6 +68,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "vgramirezc",
+      "name": "Víctor Ramírez",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/15643489?v=4",
+      "profile": "https://github.com/vgramirezc",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
