Add @NeillGiraldo as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -77,6 +77,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "NeillGiraldo",
+      "name": "Neill Giraldo",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/7451047?v=4",
+      "profile": "https://www.hackerrank.com/NeillGiraldo",
+      "contributions": [
+        "code"
+      ]
     }
   ]
 }
