--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   "scripts": {
     "test": "grunt test",
     "start": "grunt serve",
-    "build": "grunt",
-    "contributors:add": "all-contributors add",
-    "contributors:generate": "all-contributors generate"
+    "build": "grunt"
   },
   "author": {
     "name": "Hakim El Hattab",
@@ -25,9 +23,8 @@
     "node": ">=9.0.0"
   },
   "devDependencies": {
-    "all-contributors-cli": "^4.10.1",
-    "express": "^4.15.2",
-    "grunt": "^1.0.3",
+    "express": "^4.16.2",
+    "grunt": "^1.0.4",
     "grunt-autoprefixer": "^3.0.4",
     "grunt-cli": "^1.3.2",
     "grunt-contrib-connect": "^2.0.0",
@@ -36,8 +33,7 @@
     "grunt-contrib-qunit": "^3.1.0",
     "grunt-contrib-uglify": "^3.3.0",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-retire": "^1.0.7",
-    "grunt-sass": "^2.0.0",
+    "grunt-sass": "^3.0.2",
     "grunt-zip": "~0.17.1",
     "load-grunt-tasks": "^4.0.0",
     "mustache": "^2.3.0",
